--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.8.0",
+    "react-datepicker": "^4.17.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
