--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.17.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
