--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.30.0",
     "firebase": "^8.2.0",
     "next": "^12.3.4",
     "prop-types": "^15.7.2",
