--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.17.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
