--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
